# cereal-search

./: Cargo.toml  Dockerfile  config.yml  docker-compose.yml  fly.toml
.github/workflows/: docker-build-push.yml
src/: bangs.rs  config.rs  lib.rs  main.rs  models.rs  routes.rs
tests/: bangs_tests.rs  config_tests.rs  private_bangs_tests.rs  routes_tests.rs
